Sport.com Nollan

--- a/index.html
+++ b/index.html
@@ -17,66 +17,98 @@
       <p class="text">Bonjour Julien</p>
       <nav>
         <ul>
-          <li><a href="#Contact"></a>Contactez-nous</li>
-          <li><a href="#parrainage"></a>Parrainage</li>
-          <li><a href="#déconnexion"></a>Déconnexion</li>
+          <li><a href="#contact">Contactez-nous</a></li>
+          <li><a href="#parrainage">Parrainage</a></li>
+          <li><a href="#deconnexion">Déconnexion</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <img class="img2" src="./images/header-page-catalogue.png" alt="Boxe" />
       <section class="main-content">
-        <div class="profil">
-          <p class="reduction">
-            <b><span class="text-color">-45%</span></b>
-          </p>
-          <img class="imgs" src="./images/gant-boxe-2.png" alt="Gant de boxe" />
+        <div class="product-card">
+          <div class="profil">
+            <p class="reduction">
+              <b><span class="text-color">-45%</span></b>
+            </p>
+            <img
+              class="imgs"
+              src="./images/gant-boxe-2.png"
+              alt="Gant de boxe"
+            />
+          </div>
+          <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
+          <div class="offer">
+            <button class="btn1">Voir la vente</button>
+            <div class="price">
+              <p>
+                <b><s>120€</s><span class="text-color"> 65€ </span></b>
+              </p>
+            </div>
+          </div>
         </div>
-        <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
-        <div class="offer">
-          <button class="btn1">Voir la vente</button>
-          <p>
-            <b><s>120€</s><span class="text-color"> 65€ </span></b>
-          </p>
+        <div class="product-card">
+          <div class="profil">
+            <p class="reduction">
+              <b><span class="text-color">-45%</span></b>
+            </p>
+            <img
+              class="imgs"
+              src="./images/gant-boxe-1.png"
+              alt="Gant de boxe"
+            />
+          </div>
+          <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
+          <div class="offer">
+            <button class="btn1">Voir la vente</button>
+            <div class="price">
+              <p>
+                <b><s>120€</s><span class="text-color"> 65€ </span></b>
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="profil">
-          <p class="reduction">
-            <b><span class="text-color">-45%</span></b>
-          </p>
-          <img class="imgs" src="./images/gant-boxe-1.png" alt="Gant de boxe" />
+        <div class="product-card">
+          <div class="profil">
+            <p class="reduction">
+              <b><span class="text-color">-45%</span></b>
+            </p>
+            <img
+              class="imgs"
+              src="./images/gant-boxe-2.png"
+              alt="Gant de boxe"
+            />
+          </div>
+          <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
+          <div class="offer">
+            <button class="btn1">Voir la vente</button>
+            <div class="price">
+              <p>
+                <b><s>120€</s><span class="text-color"> 65€ </span></b>
+              </p>
+            </div>
+          </div>
         </div>
-        <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
-        <div class="offer">
-          <button class="btn1">Voir la vente</button>
-          <p>
-            <b><s>120€</s><span class="text-color"> 65€ </span></b>
-          </p>
-        </div>
-        <div class="profil">
-          <p class="reduction">
-            <b><span class="text-color">-45%</span></b>
-          </p>
-          <img class="imgs" src="./images/gant-boxe-2.png" alt="Gant de boxe" />
-        </div>
-        <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
-        <div class="offer">
-          <button class="btn1">Voir la vente</button>
-          <p>
-            <b><s>120€</s><span class="text-color"> 65€ </span></b>
-          </p>
-        </div>
-        <div class="profil">
-          <p class="reduction">
-            <b><span class="text-color">-45%</span></b>
-          </p>
-          <img class="imgs" src="./images/gant-boxe-1.png" alt="Gant de boxe" />
-        </div>
-        <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
-        <div class="offer">
-          <button class="btn1">Voir la vente</button>
-          <p>
-            <b><s>120€</s><span class="text-color"> 65€ </span></b>
-          </p>
+        <div class="product-card">
+          <div class="profil">
+            <p class="reduction">
+              <b><span class="text-color">-45%</span></b>
+            </p>
+            <img
+              class="imgs"
+              src="./images/gant-boxe-1.png"
+              alt="Gant de boxe"
+            />
+          </div>
+          <h4>GANTS DE BOXE COMABT KLIMAX V3</h4>
+          <div class="offer">
+            <button class="btn1">Voir la vente</button>
+            <div class="price">
+              <p>
+                <b><s>120€</s><span class="text-color"> 65€ </span></b>
+              </p>
+            </div>
+          </div>
         </div>
       </section>
       <div class="content">
@@ -91,36 +123,38 @@
       </div>
     </main>
     <footer class="footer1">
-      <div class="items">
-        <img class="img-end" src="./images/icon-livre.png" alt="Livre" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,
-          excepturi ratione blanditiis adipisci cum expedita!
-        </p>
-      </div>
-      <div class="items">
-        <img class="img-end" src="./images/icon-camion.png" alt="Camion" />
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus nobis
-          deserunt ducimus quis optio tenetur.
-        </p>
-      </div>
-      <div class="items">
-        <img class="img-end" src="./images/icon-cadenat.png" alt="Cadenat" />
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
-          error magnam quisquam fugiat recusandae hic?
-        </p>
-      </div>
-      <div class="items">
-        <img class="img-end" src="./images/icon-pouce.png" alt="Pouce" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta
-          amet fugit exercitationem veniam voluptatibus.
-        </p>
+      <div class="items-container">
+        <div class="items">
+          <img class="img-end" src="./images/icon-livre.png" alt="Livre" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Voluptatem, excepturi ratione blanditiis adipisci cum expedita!
+          </p>
+        </div>
+        <div class="items">
+          <img class="img-end" src="./images/icon-camion.png" alt="Camion" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+            nobis deserunt ducimus quis optio tenetur.
+          </p>
+        </div>
+        <div class="items">
+          <img class="img-end" src="./images/icon-cadenat.png" alt="Cadenat" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium error magnam quisquam fugiat recusandae hic?
+          </p>
+        </div>
+        <div class="items">
+          <img class="img-end" src="./images/icon-pouce.png" alt="Pouce" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+            soluta amet fugit exercitationem veniam voluptatibus.
+          </p>
+        </div>
       </div>
       <hr class="line" />
-      <div class="icone" id="Contact">
+      <div class="icone" id="contact">
         <img src="./images/icon-facebook.png" alt="Facebook" />
         <img src="./images/icon-twitter.png" alt="Twitter" />
         <img src="./images/icon-linkedin.png" alt="Linkedin" />
