sport.com nollan

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
         </div>
       </section>
-      <div class="content">
+      <!-- <div class="content">
         <nav class="nav-end">
           <ul>
             <li><a href="#qui">Qui sommes-nous</a></li>
@@ -120,7 +120,7 @@
             <li><a href="cgv">CGV</a></li>
           </ul>
         </nav>
-      </div>
+      </div> -->
     </main>
     <footer class="footer1">
       <div class="items-container">
