Sport.com main footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,7 +26,7 @@
     <main>
       <img class="img2" src="./images/header-page-catalogue.png" alt="Boxe" />
       <section class="main-content">
-        <div class="product-card">
+        <div>
           <div class="profil">
             <p class="reduction">
               <b><span class="text-color">-45%</span></b>
@@ -47,7 +47,7 @@
             </div>
           </div>
         </div>
-        <div class="product-card">
+        <div>
           <div class="profil">
             <p class="reduction">
               <b><span class="text-color">-45%</span></b>
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-        <div class="product-card">
+        <div>
           <div class="profil">
             <p class="reduction">
               <b><span class="text-color">-45%</span></b>
@@ -89,7 +89,7 @@
             </div>
           </div>
         </div>
-        <div class="product-card">
+        <div>
           <div class="profil">
             <p class="reduction">
               <b><span class="text-color">-45%</span></b>
@@ -111,16 +111,14 @@
           </div>
         </div>
       </section>
-      <!-- <div class="content">
-        <nav class="nav-end">
-          <ul>
-            <li><a href="#qui">Qui sommes-nous</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#assistance">Assistance</a></li>
-            <li><a href="cgv">CGV</a></li>
-          </ul>
-        </nav>
-      </div> -->
+      <section class="pre-footer-links">
+        <ul>
+          <li><a href="#">Qui sommes-nous</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Assistance</a></li>
+          <li><a href="#">CGV</a></li>
+        </ul>
+      </section>
     </main>
     <footer class="footer1">
       <div class="items-container">
